--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "mqtt": "^5.14.1",
+    "node-global-key-listener": "^0.3.0",
     "ws": "^8.18.3"
   }
 }
